# agentic-doc-extraction-prototype

./: README.md  document_extraction_agent.py  pyproject.toml  sample_invoice_extracted_LIVE.json  sample_invoice_extracted_MOCK.json  server.py  test.py
templates/: index.html
