[project]
name = "agentic-doc-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "frontend>=0.0.3",
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
]
